Update rofi, monitor scaling and waybar config

--- a/hypr/.config/hypr/modules/bindings.conf
+++ b/hypr/.config/hypr/modules/bindings.conf
@@ -11,7 +11,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 ## CUSTOM
-bind = CTRL, SPACE, exec, rofi --show drun ## launch rofi
+bind = CTRL, SPACE, exec, rofi -show drun # launch rofi
 bind = $mainMod, Z, exec, flatpak run app.zen_browser.zen ## launch zen
 
 # Move focus with mainMod + arrow keys
